Bug 1754448 - Simplify ending of an explicit snapshot; r=dom-storage-reviewers,ipc-reviewers,mccr8,jari
Differential Revision: https://phabricator.services.mozilla.com/D138407

UltraBlame original commit: e8b14b09afe2cb2eaaa8eb4a9e2298e6e1b6f8c2

--- a/ipc/ipdl/sync-messages.ini
+++ b/ipc/ipdl/sync-messages.ini
@@ -854,13 +854,13 @@ description = legacy sync IPC - please add detailed description
 description = legacy sync IPC - please add detailed description
 [PBackgroundLSDatabase::PBackgroundLSSnapshot]
 description = See corresponding comment in PBackgroundLSDatabase.ipdl
+[PBackgroundLSSnapshot::SyncFinish]
+description = See corresponding comment in PBackgroundLSSnapshot.ipdl
 [PBackgroundLSSnapshot::LoadValueAndMoreItems]
 description = See corresponding comment in PBackgroundLSSnapshot.ipdl
 [PBackgroundLSSnapshot::LoadKeys]
 description = See corresponding comment in PBackgroundLSSnapshot.ipdl
 [PBackgroundLSSnapshot::IncreasePeakUsage]
-description = See corresponding comment in PBackgroundLSSnapshot.ipdl
-[PBackgroundLSSnapshot::Ping]
 description = See corresponding comment in PBackgroundLSSnapshot.ipdl
 [PBackgroundSessionStorageCache::Load]
 description = See corresponding comment in PBackgroundSessionStorageCache.ipdl
