Bug 1755951 - [devtools] Prepare for the enabling of eslint on debugger tests. r=nchevobbe
After this patch, we only need to remove the ignore from /.eslintignore.

My goal originaly was to simply add `import-globals-from` comments in helpers.js
But because of cross dependencies between head.js and helpers.js, it wasn't so trivial.
I first tried to merge them into a unique head.js, but the EXAMPLE_URL symbol
should not be imported by tests external to the debugger.
So I aligned debugger to the common practice of naming the shared head file... shared-head.js!
Like the inspector is doing.
I also merged helpers/context.js into shared-head.js to simplify things a bit.

Because of that I had to tweak many tests outside of the debugger.

Differential Revision: https://phabricator.services.mozilla.com/D139099

UltraBlame original commit: 124fb7aebc8946d42632609158501603bf7b53e0

--- a/devtools/client/debugger/test/mochitest/browser.ini
+++ b/devtools/client/debugger/test/mochitest/browser.ini
@@ -5,8 +5,7 @@ skip-if = (os == 'linux' && debug && bits == 32)
 support-files =
   examples/*
   head.js
-  helpers.js
-  helpers/context.js
+  shared-head.js
   !/devtools/client/framework/browser-toolbox/test/helpers-browser-toolbox.js
   !/devtools/client/inspector/test/head.js
   !/devtools/client/inspector/test/shared-head.js
