Bug 1754955 - Enable dFPI for web platform test in Nightly, r=pbz
Differential Revision: https://phabricator.services.mozilla.com/D139393

UltraBlame original commit: f3359063687e1c38fb94e91927fa3cc4b23b71a9

--- a/testing/web-platform/meta/service-workers/service-worker/partitioned-service-worker-claim.tentative.https.html.ini
+++ b/testing/web-platform/meta/service-workers/service-worker/partitioned-service-worker-claim.tentative.https.html.ini
@@ -5,7 +5,7 @@
     expected:
       if (os == "linux") and fission and debug and not swgl and not domstreams: [PASS, FAIL]
       if (os == "linux") and fission and debug and not swgl and domstreams: [FAIL, PASS]
-      if (os == "win") and debug and not swgl and (processor == "x86_64"): [PASS, FAIL]
+      if (os == "win") and not swgl and (processor == "x86_64"): [PASS, FAIL]
       if (os == "linux") and fission and not debug: [FAIL, TIMEOUT]
       if (os == "mac") and debug: [PASS, FAIL]
       if (os == "mac") and not debug: [FAIL, PASS]
