Bug 1600309 - P2: Don't use socket porcess when it crashes too many times, r=necko-reviewers,valentin
Differential Revision: https://phabricator.services.mozilla.com/D134904

UltraBlame original commit: 5f05b9825ec0f42822f43891b3f07aa7834a0b62

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -10799,6 +10799,13 @@
   value: 5
   mirror: always
 
+# The maximum count that we allow socket prrocess to crash. If this count is
+# reached, we won't use networking over socket process.
+- name: network.max_socket_process_failed_count
+  type: RelaxedAtomicUint32
+  value: 1
+  mirror: always
+
 #---------------------------------------------------------------------------
 # Prefs starting with "nglayout."
 #---------------------------------------------------------------------------
