--- a/devtools/client/debugger/test/mochitest/browser.ini
+++ b/devtools/client/debugger/test/mochitest/browser.ini
@@ -51,6 +51,7 @@ skip-if = debug # Window leaks: bug 1575332
 [browser_dbg-breakpoints-debugger-statement.js]
 [browser_dbg-breakpoints-duplicate-functions.js]
 [browser_dbg-breakpoints-in-evaled-sources.js]
+[browser_dbg-breakpoints-list.js]
 [browser_dbg-breakpoints-popup.js]
 [browser_dbg-browser-content-toolbox.js]
 skip-if = !e10s || verify # This test is only valid in e10s
