Bug 1756269: Add nsIDOMWindowUtils.refreshDriverHasPendingTick API, for use in regression tests. r=smaug
This API essentially reports whether the refresh driver is actively consuming
CPU.  This is intended for use in regression tests for bugs about the refresh
driver needlessly cycling.

Differential Revision: https://phabricator.services.mozilla.com/D139218

UltraBlame original commit: 996c13e87e7c6c9595471dd171a40770829b1481

--- a/layout/base/tests/mochitest.ini
+++ b/layout/base/tests/mochitest.ini
@@ -163,6 +163,9 @@ skip-if = toolkit == 'android' # android: Requires plugin support
 support-files = preserve3d_sorting_hit_testing_iframe.html
 [test_preserve3d_sorting_hit_testing2.html]
 support-files = preserve3d_sorting_hit_testing2_iframe.html
+[test_refreshDriverHasPendingTick.html]
+prefs =
+  layout.keep_ticking_after_load_ms=0
 [test_reftests_with_caret.html]
 skip-if =
   tsan  # Bug 1612707
