--- a/toolkit/components/telemetry/Scalars.yaml
+++ b/toolkit/components/telemetry/Scalars.yaml
@@ -6059,6 +6059,7 @@ networking:
       - 1590124
       - 1621800
       - 1668604
+      - 1706842
     description: >
       How many KB of HTTP data transferred by type, there are some categories
       separated by keys based on 5 parameters:
@@ -6093,7 +6094,7 @@ networking:
         "Y21_P3FpLead",
         "Y22_P3FpBg",
         "Y23_P3FpOth"
-    expires: "91"
+    expires: "never"
     keyed: true
     kind: uint
     notification_emails:
