--- a/layout/base/tests/mochitest.ini
+++ b/layout/base/tests/mochitest.ini
@@ -163,6 +163,7 @@ skip-if = toolkit == 'android' # android: Requires plugin support
 support-files = preserve3d_sorting_hit_testing_iframe.html
 [test_preserve3d_sorting_hit_testing2.html]
 support-files = preserve3d_sorting_hit_testing2_iframe.html
+[test_refreshDriver_hasPendingTick.html]
 [test_reftests_with_caret.html]
 skip-if =
   tsan  # Bug 1612707
