Bug 1756118 followup: add a test to be sure refresh driver stops ticking when resize observer is unregistered. r=smaug
Differential Revision: https://phabricator.services.mozilla.com/D139519

UltraBlame original commit: a2dbff9da48a15264c7848bd4aaa19892dccda41

--- a/layout/base/tests/mochitest.ini
+++ b/layout/base/tests/mochitest.ini
@@ -140,6 +140,7 @@ support-files = bug1448730.html
 [test_bug1515822.html]
 [test_bug1550869_video.html]
 [test_bug1714640.html]
+[test_bug1756118.html]
 [test_dynamic_toolbar_max_height.html]
 support-files = file_dynamic_toolbar_max_height.html
 [test_emulateMedium.html]
