Bug 1741244 - p1: support software MFT video encoders. r=alwu,media-playback-reviewers
Differential Revision: https://phabricator.services.mozilla.com/D135766

UltraBlame original commit: 77104570d24ee891b61b2f90379ad0a3d2447e6e

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -9470,6 +9470,11 @@
 #endif
   mirror: always
 
+- name: media.webrtc.platformencoder.sw_mft
+  type: RelaxedAtomicBool
+  value: @IS_EARLY_BETA_OR_EARLIER@
+  mirror: always
+
 - name: media.block-autoplay-until-in-foreground
   type: bool
 #if !defined(MOZ_WIDGET_ANDROID)
