--- a/dom/media/test/mochitest_stream.ini
+++ b/dom/media/test/mochitest_stream.ini
@@ -23,7 +23,9 @@
 
 [DEFAULT]
 subsuite = media
-skip-if = (os == "win" && processor == "aarch64") # aarch64 due to 1536604
+tags=mtg capturestream
+skip-if =
+  (os == "win" && processor == "aarch64") # aarch64 due to 1536604
 support-files =
   16bit_wave_extrametadata.wav
   16bit_wave_extrametadata.wav^headers^
@@ -761,224 +763,22 @@ support-files =
   hls/960x720_seg1.ts
   sync.webm
 
-[test_access_control.html]
-[test_arraybuffer.html]
-[test_aspectratio_mp4.html]
-[test_audio1.html]
-[test_audio2.html]
-[test_audioDocumentTitle.html]
-skip-if = true # bug 475110 - disabled since we don't play Wave files standalone
-[test_buffered.html]
-[test_can_play_type.html]
-skip-if = (android_version == '25' && debug) # android(bug 1232305)
-[test_can_play_type_mpeg.html]
-[test_can_play_type_no_ogg.html]
-skip-if = (android_version == '25' && debug) # android(bug 1232305)
-[test_can_play_type_ogg.html]
-skip-if = (android_version == '25' && debug) # android(bug 1232305)
-[test_capture_stream_av_sync.html]
+[test_streams_capture_origin.html]
+[test_streams_element_capture.html]
+skip-if = true # bug 1372457 # bug 1557901 # bug 1554808
+[test_streams_element_capture_mediatrack.html]
+[test_streams_element_capture_playback.html]
+[test_streams_element_capture_reset.html]
+[test_streams_element_capture_twice.html]
+[test_streams_firstframe.html]
+[test_streams_gc.html]
+[test_streams_individual_pause.html]
 skip-if =
-    toolkit == 'android' # 1712598 (canvas error)
-    (verify && os == 'mac') # 1517199 (timeout-on-osx)
-    (os == "linux" && tsan) # 1713397 (high intermittent failure on linux tsan)
-    apple_silicon # Disabled due to bleedover with other tests when run in regular suites; passes in "failures" jobs
-[test_chaining.html]
-[test_clone_media_element.html]
-skip-if = toolkit == 'android' # bug 1108558, android(bug 1232305)
-[test_closing_connections.html]
-[test_constants.html]
-[test_controls.html]
-[test_cueless_webm_seek-1.html]
-[test_cueless_webm_seek-2.html]
-[test_cueless_webm_seek-3.html]
-[test_currentTime.html]
-[test_decode_error.html]
-[test_decode_error_crossorigin.html]
-[test_decoder_disable.html]
-[test_defaultMuted.html]
-[test_delay_load.html]
-[test_duration_after_error.html]
-[test_empty_resource.html]
-[test_error_in_video_document.html]
-[test_error_on_404.html]
-[test_fastSeek.html]
-[test_fastSeek-forwards.html]
-[test_imagecapture.html]
-scheme=https
-[test_info_leak.html]
-[test_invalid_reject.html]
-[test_invalid_reject_play.html]
-[test_invalid_seek.html]
-[test_load.html]
-[test_load_candidates.html]
-[test_load_same_resource.html]
-[test_load_source.html]
-[test_load_source_empty_type.html]
-[test_loop.html]
-[test_looping_eventsOrder.html]
-[test_media_selection.html]
-[test_media_sniffer.html]
-[test_mediastream_as_eventarget.html]
-[test_mediatrack_consuming_mediaresource.html]
-[test_mediatrack_consuming_mediastream.html]
+  os == "mac" && debug # Bug 1756880 - temp due to low frequency shutdown hang
 scheme=https
 tags=mtg
-[test_mediatrack_events.html]
-scheme=https
-[test_mediatrack_parsing_ogg.html]
-[test_mediatrack_replay_from_end.html]
-[test_metadata.html]
-[test_midflight_redirect_blocked.html]
-[test_mixed_principals.html]
-skip-if =
-  toolkit == 'android' # bug 1309814, android(bug 1232305)
-  apple_silicon # bug 1707737
-[test_mozHasAudio.html]
-[test_mp3_with_multiple_ID3v2.html]
-[test_multiple_mediastreamtracks.html]
-scheme=https
-[test_networkState.html]
-[test_new_audio.html]
-[test_no_load_event.html]
-[test_not_reset_playbackRate_when_removing_nonloaded_media_from_document.html]
-[test_paused.html]
-[test_paused_after_ended.html]
-[test_periodic_timeupdate.html]
-[test_play_events.html]
-[test_play_events_2.html]
-[test_play_promise_1.html]
-tags=promise-play
-[test_play_promise_2.html]
-tags=promise-play
-[test_play_promise_3.html]
-tags=promise-play
-[test_play_promise_4.html]
-tags=promise-play
-[test_play_promise_5.html]
-tags=promise-play
-[test_play_promise_6.html]
-tags=promise-play
-[test_play_promise_7.html]
-tags=promise-play
-[test_play_promise_8.html]
-tags=promise-play
-[test_play_promise_9.html]
-tags=promise-play
-[test_play_promise_10.html]
-tags=promise-play
-[test_play_promise_11.html]
-tags=promise-play
-[test_play_promise_12.html]
-tags=promise-play
-[test_play_promise_13.html]
-tags=promise-play
-[test_play_promise_14.html]
-tags=promise-play
-[test_play_promise_15.html]
-tags=promise-play
-[test_play_promise_16.html]
-tags=promise-play
-[test_play_promise_17.html]
-tags=promise-play
-[test_play_promise_18.html]
-tags=promise-play
-[test_play_twice.html]
-skip-if = appname == "seamonkey" #  Seamonkey: Bug 598252, bug 1307337, bug 1143695
-# If encountering intermittents in test_playback.html please consider disabling
-# the individual faulting file via `manifest.js` as disabling the whole test on
-# a platform removes a lot of coverage.
-[test_playback.html]
-skip-if = toolkit == 'android' # bug 1316177
-[test_playback_and_bfcache.html]
-support-files = file_playback_and_bfcache.html
-[test_playback_errors.html]
-[test_playback_rate.html]
-[test_playback_rate_playpause.html]
-[test_playback_reactivate.html]
-[test_played.html]
-skip-if = toolkit == 'android' && is_emulator # Times out on android-em, Bug 1613946
-[test_preload_actions.html]
-[test_preload_attribute.html]
-[test_preload_suspend.html]
-[test_preserve_playbackrate_after_ui_play.html]
-[test_progress.html]
-[test_reactivate.html]
-skip-if = true # see bug 1319725
-[test_readyState.html]
-[test_referer.html]
-skip-if = android_version == '25' && debug # android(bug 1232305)
-[test_replay_metadata.html]
-[test_reset_events_async.html]
-[test_reset_src.html]
-skip-if = (verify && debug && os == 'win')
-[test_video_dimensions.html]
-[test_resolution_change.html]
-tags=capturestream
-[test_resume.html]
-skip-if = true # bug 1021673
-[test_seamless_looping.html]
-[test_source.html]
-[test_source_null.html]
-[test_source_write.html]
-[test_standalone.html]
-[test_suspend_media_by_inactive_docshell.html]
-[test_timeupdate_small_files.html]
-[test_unseekable.html]
-[test_video_to_canvas.html]
-skip-if = toolkit == 'android' # android(bug 1232305), bugs 1320418,1347953,1347954,1348140,1348386
-[test_video_in_audio_element.html]
-[test_video_stats_resistfingerprinting.html]
-tags = resistfingerprinting
-[test_videoDocumentTitle.html]
-[test_VideoPlaybackQuality.html]
-[test_VideoPlaybackQuality_disabled.html]
-[test_volume.html]
-[test_vp9_superframes.html]
-# The tests below contain backend-specific tests. Write backend independent
-# tests rather than adding to this list.
-[test_can_play_type_webm.html]
-[test_can_play_type_wave.html]
-[test_fragment_noplay.html]
-[test_fragment_play.html]
-
-[test_temporary_file_blob_video_plays.html]
-skip-if = toolkit == 'android'
-  (os == 'win' && processor == 'aarch64') # bug 1533534 # android(bug 1232305)
-[test_videoPlaybackQuality_totalFrames.html]
-skip-if = os == 'win'
-  (os == 'mac' && os_version == '10.14') # bug 1374189, mac due to bug 1544938
-
-[test_video_gzip_encoding.html]
-
-[test_playback_hls.html]
-# HLS is only supported on Fennec with API level >= 16
-# TODO: This test is similar to test_playback.html, will remove the
-# redundant code once test_playback.html is enabled on Fennec.
-skip-if = toolkit != 'android'
-tags = hls
-
-[test_hls_player_independency.html]
-# There's a limit for creating decoder when API lever < 18(Bug 1278574)
-# We could skip the test in that case as we cannot play 2 video at a time.
-skip-if = toolkit != 'android'
-  android_version < '18'
-tags = hls
-
-[test_bug1431810_opus_downmix_to_mono.html]
-
-[test_cloneElementVisually_paused.html]
-tags = cloneelementvisually
-[test_cloneElementVisually_mediastream.html]
-tags = cloneelementvisually
-[test_cloneElementVisually_mediastream_multitrack.html]
-tags = cloneelementvisually
-[test_cloneElementVisually_resource_change.html]
-skip-if =
-  os == "linux" && !(debug || asan || tsan) # Bug 1559308 - lower frequency intermittent 
-tags = cloneelementvisually
-[test_cloneElementVisually_no_suspend.html]
-tags = cloneelementvisually
-[test_cloneElementVisually_poster.html]
-tags = cloneelementvisually
-[test_cloneElementVisually_ended_video.html]
-tags = cloneelementvisually
+[test_streams_srcObject.html]
+skip-if = toolkit == 'android' # bug 1300443, android(bug 1232305)
+  os == "mac" && debug # Bug 1756880 - temp due to high frequency shutdown hang
+[test_streams_tracks.html]
+skip-if = toolkit == 'android' # android(bug 1232305)
