--- a/dom/media/webrtc/tests/mochitests/mochitest_datachannel.ini
+++ b/dom/media/webrtc/tests/mochitests/mochitest_datachannel.ini
@@ -34,27 +34,20 @@ prefs =
   privacy.partition.network_state=false
   network.proxy.allow_hijacking_localhost=true
 
-[test_1488832.html]
-skip-if =
-  os == 'linux' # Bug 1714410
-[test_1717318.html]
-[test_a_noOp.html]
+[test_dataChannel_basicAudio.html]
+[test_dataChannel_basicAudioVideo.html]
+[test_dataChannel_basicAudioVideoNoBundle.html]
+[test_dataChannel_basicAudioVideoCombined.html]
+[test_dataChannel_basicDataOnly.html]
+[test_dataChannel_hostnameObfuscation.html]
 scheme=http
-[test_enumerateDevices.html]
-[test_enumerateDevices_navigation.html]
-skip-if = true # Disabled because it is a racy test and causes timeouts, see bug 1650932
-[test_enumerateDevices_getUserMediaFake.html]
-[test_fingerprinting_resistance.html]
-skip-if =
-  os == "linux" && asan # Bug 1646309 - low frequency intermittent
-[test_forceSampleRate.html]
+[test_dataChannel_stats.html]
+skip-if = toolkit == 'android' # no hostname obfuscation on android
 scheme=http
-[test_groupId.html]
-[test_setSinkId.html]
-skip-if =
-  os != 'linux' # the only platform with real devices
-[test_setSinkId_default_addTrack.html]
-[test_setSinkId_preMutedElement.html]
-[test_ondevicechange.html]
-run-sequentially = sets prefs that may disrupt other tests
-[test_unfocused_pref.html]
+[test_dataChannel_basicVideo.html]
+[test_dataChannel_bug1013809.html]
+[test_dataChannel_dataOnlyBufferedAmountLow.html]
+scheme=http
+[test_dataChannel_dtlsVersions.html]
+[test_dataChannel_noOffer.html]
+scheme=http
