Bug 1756557 - Add helper code for creating nodejs servers r=necko-reviewers,kershaw
Differential Revision: https://phabricator.services.mozilla.com/D139358

UltraBlame original commit: 200a53cbe23315bdb34bf81d9a8e6d88b3df3630

--- a/netwerk/test/unit/xpcshell.ini
+++ b/netwerk/test/unit/xpcshell.ini
@@ -1,6 +1,6 @@
 
 [DEFAULT]
-head = head_channels.js head_cache.js head_cache2.js head_cookies.js head_trr.js head_http3.js
+head = head_channels.js head_cache.js head_cache2.js head_cookies.js head_trr.js head_http3.js head_servers.js
 support-files =
   http2-ca.pem
   client_cert_chooser.js
@@ -598,6 +598,8 @@ run-sequentially = node server exceptions dont replay well
 [test_https_rr_sorted_alpn.js]
 skip-if = os == "android"
 run-sequentially = node server exceptions dont replay well
+[test_servers.js]
+skip-if = os == "android" # head_servers.js isn't aware of Android hosts yet
 [test_networking_over_socket_process.js]
 skip-if =
   os == "android"
