Bug 1721999 - disable browser_dbg-quick-open.js on Linux_64_debug for frequent failures. r=intermittent-reviewers,jmaher DONTBUILD
Differential Revision: https://phabricator.services.mozilla.com/D139603

UltraBlame original commit: 103ca0d3b90fbc457e7aeb63dedc29d979917368

--- a/devtools/client/debugger/test/mochitest/browser.ini
+++ b/devtools/client/debugger/test/mochitest/browser.ini
@@ -169,7 +169,9 @@ skip-if = os == "win" # Bug 1393121
 [browser_dbg-search-file-paused.js]
 skip-if = os == "win" # Bug 1393121
 [browser_dbg-quick-open.js]
-skip-if = os == "win"
+skip-if =
+  os == "win"
+  os == 'linux' && bits == 64 && debug # Bug 1721999
 [browser_dbg-search-project.js]
 [browser_dbg-blackbox-all.js]
 [browser_dbg-blackbox-original.js]
