Bug 1756969 - TRR strict mode should still fallback to DNS for rcode errors r=necko-reviewers,kershaw
Differential Revision: https://phabricator.services.mozilla.com/D139582

UltraBlame original commit: a065ed4f05a97b402f55be8d00c86731241a65b7

--- a/netwerk/test/unit/xpcshell.ini
+++ b/netwerk/test/unit/xpcshell.ini
@@ -598,6 +598,7 @@ run-sequentially = node server exceptions dont replay well
 [test_https_rr_sorted_alpn.js]
 skip-if = os == "android"
 run-sequentially = node server exceptions dont replay well
+[test_trr_strict_mode.js]
 [test_servers.js]
 skip-if = os == "android" # head_servers.js isn't aware of Android hosts yet
 [test_networking_over_socket_process.js]
